--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <div>
       <a
         class="px-4 py-1 rounded-full border hover:bg-teal-500"
-        routerLink="/helth"
+        routerLink="/auth"
         routerLinkActive="active"
       >
         Login ></a
