--- a/src/app/components/admin/home/home.component.html
+++ b/src/app/components/admin/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="flex">
-  <div style="width: 280px">
+  <div style="width: 300px">
     <app-sidebar></app-sidebar>
   </div>
-  <div>
+  <div class="w-full">
     <app-header></app-header>
   </div>
 </div>
