add category form design & validation

--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -7,11 +7,26 @@
   <!-- link  -->
   <div class="ps-2 flex flex-col gap-2 transition-all">
     <a
-      routerLink=""
+      routerLink="/admin"
       routerLinkActive="active"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
       <ng-icon class="text-xl" name="ionLeafOutline"></ng-icon> Assessment Home
+    </a>
+    <a
+      routerLink=""
+      routerLinkActive="active"
+      class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
+    >
+      <ng-icon class="text-xl" name="ionAppsOutline"></ng-icon> All Category
+    </a>
+    <a
+      routerLink="/admin/add-category"
+      routerLinkActive="active"
+      class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
+    >
+      <ng-icon class="text-xl" name="ionDuplicateOutline"></ng-icon> Add
+      Category
     </a>
     <a
       routerLink=""
