--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
       <ng-icon class="text-xl" name="heroQueueList"></ng-icon> All Assessment
     </a>
     <a
-      routerLink=""
+      routerLink="/admin/add-assessment"
       routerLinkActive="active"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
