implement register, login & add category

--- a/src/app/components/admin/header/header.component.html
+++ b/src/app/components/admin/header/header.component.html
@@ -27,8 +27,15 @@
         </div>
       </div>
 
-      <div class="h-10 w-10 bg-teal-700 rounded-full"></div>
+      <div *ngIf="user" class="h-10 w-10 border rounded-full p-1">
+        <img
+          class="w-full h-full object-cover"
+          src="{{ user.profileImageUrl }}"
+          alt=""
+        />
+      </div>
       <a
+        *ngIf="!user"
         class="px-4 py-1 rounded-full border hover:bg-teal-500"
         routerLink="/auth"
         routerLinkActive="active"
