get all category

--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
       <ng-icon class="text-xl" name="ionLeafOutline"></ng-icon> Assessment Home
     </a>
     <a
-      routerLink=""
+      routerLink="/admin/categories"
       routerLinkActive="active_sidebar"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
