--- a/src/app/components/admin/sidebar/sidebar.component.html
+++ b/src/app/components/admin/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
       Category
     </a>
     <a
-      routerLink=""
+      routerLink="/admin/assessments"
       routerLinkActive="active_sidebar"
       class="flex items-center gap-3 px-4 py-2 hover:bg-white rounded-l-full hover:text-teal-600"
     >
