--- a/src/app/components/admin/assessments/assessments.component.html
+++ b/src/app/components/admin/assessments/assessments.component.html
@@ -53,6 +53,21 @@
       </div>
     </div>
   </div>
+  <ul class="flex justify-center my-5">
+    <li
+      *ngFor="
+        let item of [].constructor(listAssessment.totalPages);
+        let page = index
+      "
+    >
+      <a
+        [ngClass]="page == currentPage ? 'bg-yellow-600' : 'bg-gray-600'"
+        (click)="gotoPage(page)"
+        class="text-white py-1 px-3 rounded-full font-semibold text-xs"
+        >{{ page }}</a
+      >
+    </li>
+  </ul>
 </ng-container>
 
 <ng-template #failureOrLoading>
@@ -62,7 +77,7 @@
     </div>
   </ng-container>
   <ng-template #loading>
-    <div class="shadow">
+    <div class="shadow loader">
       <span><i class="fa-solid fa-rotate fa-spin"></i></span> &nbsp;
       <span>Processing...</span>
     </div>
